db_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: srinjchadb
  name: srinjchadb
  namespace: srinjcha-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srinjchadb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: srinjchadb
    spec:
      volumes:
      - name: srinjchadbvol
        hostPath:
         path: /data/srinjchadb
         type: DirectoryOrCreate
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - name: srinjchadbvol
          mountPath: /var/lib/mysql/
status: {}
