deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: srinjcha-cisco-app
  name: srinjcha-cisco-app
  namespace: srinjcha-test # namespace 
spec:
  replicas: 5
  selector:
    matchLabels:
      app: srinjcha-cisco-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: srinjcha-cisco-app
    spec:
      containers:
      - image: srinjcha/srinjcha:ciscoappv3
        name: srinjchawebapp
        ports:
        - containerPort: 80
        imagePullPolicy: Always # everytime pull image 
        resources: # restricting pod container in term of resoruces 
          requests:
            cpu: 100m
            memory: 200M
          limits:
            cpu: 200m
            memory: 300M
