db_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: srinjchadblb
  name: srinjchadblb
  namespace: srinjcha-test
spec:
  ports:
  - name: 3306-3306
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: srinjchadb
  type: ClusterIP
status:
  loadBalancer: {}
