svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: srinjchalbfinal
  name: srinjchalbfinal
  namespace: srinjcha-test # namespace 
spec:
  ports:
  - name: 1234-80
    port: 1234
    protocol: TCP
    targetPort: 80
  selector: # endpoint creator using pod label 
    app: srinjcha-cisco-app # this is label of pod 
  type: ClusterIP
status:
  loadBalancer: {}
