route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srinjcha-route-rule-1
  namespace: srinjcha-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # name of class means product code name of ingress 
  rules:
  - host: www.srinjcha.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srinjchalbfinal  # name of internal lb / svc 
            port:
              number: 80
